--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,77 @@
-h1 {
-    color: blue;
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    max-width: 1100px;
+    background-color: #ddd;
+    position: relative;
+    margin: 50px auto;
+    padding: 20px 50px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+/* Header */
+.header {
+    text-align: center;
+}
+
+.main-title {
+    font-size: 40px;
+}
+
+.main-paragraph {
+    font-style: italic;
+}
+
+/* Imagem Destaque */
+.featured-image {
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* Biografia */
+.biography-container {
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #757373;
+    border-bottom: 1px dashed #757373;
+}
+
+/* Quotes */
+.quotes-container {
+    background-color: #a8a8a8;
+    padding: 30px;
+}
+
+.quotes-container blockquote {
+    font-weight: bold;
+    font-size: 30px
+}
+
+.quotes-container p {
+    font-style: italic;
+}
+
+/* Curidades */
+.curiosities-container {
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #757373;
+    border-bottom: 1px dashed #757373;
+}
+
+.curiosities-container li {
+    height: 30px;
+}
+
+/* Imagem bold */
+.img-bold {
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
